3.6.0/_sources/gallery/lines_bars_and_markers/scatter_custom_symbol.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines_bars_and_markers/scatter_custom_symbol.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_scatter_custom_symbol.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_scatter_custom_symbol.py:


=================================
Scatter plots with custom symbols
=================================

.. redirect-from:: /gallery/lines_bars_and_markers/scatter_symbol
.. redirect-from:: /gallery/lines_bars_and_markers/scatter_piecharts

.. GENERATED FROM PYTHON SOURCE LINES 11-15

Using TeX symbols
-----------------
An easy way to customize scatter symbols is passing a TeX symbol name
enclosed in $-signs as a marker. Below we use ``marker=r'$\clubsuit$'``.

.. GENERATED FROM PYTHON SOURCE LINES 15-35

.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    x = np.arange(0.0, 50.0, 2.0)
    y = x ** 1.3 + np.random.rand(*x.shape) * 30.0
    sizes = np.random.rand(*x.shape) * 800 + 500

    fig, ax = plt.subplots()
    ax.scatter(x, y, sizes, c="green", alpha=0.5, marker=r'$\clubsuit$',
               label="Luck")
    ax.set_xlabel("Leprechauns")
    ax.set_ylabel("Gold")
    ax.legend()
    plt.show()




.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_custom_symbol_001.png
   :alt: scatter custom symbol
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_custom_symbol_001.png, /gallery/lines_bars_and_markers/images/sphx_glr_scatter_custom_symbol_001_2_0x.png 2.0x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 36-40

Using a custom path
-------------------
Alternatively, one can also pass a custom path of N vertices as a Nx2 array
of x, y values as *marker*.

.. GENERATED FROM PYTHON SOURCE LINES 40-54

.. code-block:: default


    # unit area ellipse
    rx, ry = 3., 1.
    area = rx * ry * np.pi
    theta = np.arange(0, 2 * np.pi + 0.01, 0.1)
    verts = np.column_stack([rx / area * np.cos(theta), ry / area * np.sin(theta)])

    x, y, s, c = np.random.rand(4, 30)
    s *= 10**2.

    fig, ax = plt.subplots()
    ax.scatter(x, y, s, c, marker=verts)

    plt.show()



.. image-sg:: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_custom_symbol_002.png
   :alt: scatter custom symbol
   :srcset: /gallery/lines_bars_and_markers/images/sphx_glr_scatter_custom_symbol_002.png, /gallery/lines_bars_and_markers/images/sphx_glr_scatter_custom_symbol_002_2_0x.png 2.0x
   :class: sphx-glr-single-img






.. _sphx_glr_download_gallery_lines_bars_and_markers_scatter_custom_symbol.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: scatter_custom_symbol.py <scatter_custom_symbol.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: scatter_custom_symbol.ipynb <scatter_custom_symbol.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
